Adjusted card spacing/wording. Fixed button sizes for smaller screens. Added Mailto in footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,6 +134,9 @@ a > i { /*Social Media icons*/
     background-color: #CDD1EA;
     text-align: center;
 }
+.topBuffer {
+    margin-top: 1% ;
+}
 
 /*Footer Section*/
 .black-section{
